# aro_back

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: azure_cicd_BackDockerImage3.yml  azurethree_aroback.yml  azuretwo_backgit.yml
api/: db.py  main.py  migrate_db.py
api/cruds/: certification.py  matching.py  person.py  searching.py  user.py
api/matching/: matching.py
api/models/: person.py  user.py
api/routers/: certification.py  matching.py  person.py  searching.py  user.py
api/schemas/: person.py  token.py  user.py
